<resources>
    <string name="app_name">ColdSwiftApps</string>
    <string name="category">Category</string>
    <string name="nav_home">Home</string>
    <string name="home">Home</string>
    <string name="my_tickets">My Tickets</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="rouf_aufalin_al_ghoitsal">Rouf Aufalin Al Ghoitsal</string>
    <string name="email">roufaufalinalghoitsal@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="music">Music</string>
    <string name="festival">Festival</string>
    <string name="teater">Teater</string>
    <string name="stand_up">Stand Up</string>
    <string name="event">Taylor Swift: The Eras Tour</string>
    <string name="std_gelora_bung_karno_jakarta">Std. Gelora Bung Karno Jakarta</string>
    <string name="date">14</string>
    <string name="june">August</string>
    <string name="price">500K</string>
    <string name="exhibition">Exhibition</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="datee">14 Juni 2024</string>
    <string name="error_password_length">Password must be at least 8 characters long</string>
    <string name="email_error">Enter a valid email</string>
    <string name="input_email">Enter Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="coldswift">ColdSwift</string>
    <string name="login_copywriting">Log in to continue your easy and fast ticketing experience.</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="input_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enjoy_the_convenience_of_booking_tickets_at_your_fingertips">Enjoy the Convenience of Booking Tickets at Your Fingertips</string>
    <string name="coldswift_organizer">ColdSwift Organizer</string>
    <string name="harga">Price :</string>
    <string name="harga_tiket">800.0000</string>
    <string name="detaiL_date">Date :</string>
    <string name="detail_date">14 Agustus 2024</string>
    <string name="detail_lokasi">Location :</string>
    <string name="description">Description :</string>
    <string name="desc_dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="buy">Buy</string>
    <string name="nik">NIK</string>
    <string name="input_nik">Enter NIK</string>
    <string name="nik_error">Masukan NIK dengan benar!</string>
    <string name="name">Name</string>
    <string name="input_name">Enter Your Name</string>
    <string name="join_with_us">Join with us</string>
    <string name="regist_copywriting"><![CDATA[By signing up, you agree to our Terms & Conditions and Privacy Policy.]]></string>
    <string name="face_verification_for_your_security_and_ease">Face Verification for Your Security and Ease</string>
    <string name="open_camera">Open Camera</string>
    <string name="confirmation">Confirmation</string>
    <string name="ktp_verification_for_your_security_and_ease">KTP Verification for Your Security and Ease</string>
    <string name="pastikan_wajah_anda_di_tengah">Pastikan Wajah Anda di Tengah</string>
    <string name="confirm_purchase">Confirm Purchase!</string>
    <string name="conifrmation_buy">Are you sure to purchase this ticket?</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>
    <string name="register_failed">Sorry, your registration failed!</string>
    <string name="registration_successfull">Your Registration was Successful</string>
    <string name="_3319061406030003">3319061406030003</string>
    <string name="next">Next</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="emailrek">Email</string>
    <string name="Setting">Setting</string>
</resources>