<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/vector"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_myticket"
            android:icon="@drawable/troli"
            android:title="@string/my_tickets" />
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/profile"
            android:title="@string/my_profile" />
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/log_out"/>
        </menu>


    </item>
</menu>